--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ attrs==23.1.0
 bcrypt==4.0.1
 bidict==0.23.1
 blinker==1.6.3
+branca==0.7.1
 certifi==2023.7.22
 charset-normalizer==3.3.0
 click==8.1.7
@@ -13,9 +14,10 @@ flask==2.3.3
 flask-bcrypt==1.0.1
 flask-login==0.6.2
 flask-mail==0.9.1
-flask-socketIO==5.3.6
+flask-socketio==5.3.6
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.1
+folium==0.16.0
 frozenlist==1.4.0
 greenlet==3.0.0
 h11==0.14.0
@@ -24,6 +26,7 @@ itsdangerous==2.1.2
 jinja2==3.1.2
 markupsafe==2.1.3
 multidict==6.0.4
+numpy==1.26.4
 pyjwt==2.8.0
 python-dotenv==1.0.0
 python-engineio==4.9.0
@@ -37,4 +40,5 @@ urllib3==2.0.7
 werkzeug==2.3.7
 wsproto==1.2.0
 wtforms==3.1.0
+xyzservices==2023.10.1
 yarl==1.9.2
